--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "tonality",
   "version": "0.1.0",
-  "description": "",
+  "description": "Web-based synthesizer experiment",
   "author": "ayan4m1 <andrew@bulletlogic.com>",
   "license": "MIT",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "start": "cross-env NODE_ENV=development webpack serve",
     "prepare": "husky",
-    "lint": "eslint src/**/*.js"
+    "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
-    "@babel/runtime": "^7.26.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -26,32 +25,31 @@
     "react-bootstrap-typeahead": "^6.3.4",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "6.28.1",
+    "react-router-dom": "7.1.1",
     "reselect": "^5.1.1",
     "semver": "^7.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/eslint-parser": "^7.26.5",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/register": "^7.25.9",
     "@eslint/js": "^9.18.0",
+    "@types/node": "^22.10.6",
+    "@types/react": "^19.0.6",
+    "@types/react-bootstrap": "^0.32.37",
+    "@types/react-dom": "^19.0.3",
+    "@types/webpack": "^5.28.5",
     "autoprefixer": "^10.4.20",
-    "babel-loader": "^9.2.1",
-    "babel-plugin-path-chunk-name": "^1.3.1",
     "clean-webpack-plugin": "^4.0.0",
     "cname-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^9.18.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-import-resolver-webpack": "^0.13.10",
     "eslint-plugin-import-x": "^4.6.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-webpack-plugin": "^4.2.0",
     "globals": "^15.14.0",
@@ -64,13 +62,17 @@
     "postcss-loader": "^8.1.1",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.4.2",
-    "sass": "^1.83.1",
+    "sass": "^1.83.2",
     "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
-    "stylelint": "^16.13.0",
+    "stylelint": "^16.13.1",
     "stylelint-config-recommended": "^15.0.0",
     "stylelint-webpack-plugin": "^5.0.1",
     "terser-webpack-plugin": "^5.3.11",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
